ossm/client-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client
spec:
  hosts:
  - "client.foo.svc.cluster.local"
  gateways:
  - client-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: client.foo.svc.cluster.local
