ossm/originate-mtls-for-server.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-mtls-for-server
spec:
  host: server.server.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: MUTUAL
        credentialName: server-credential # this must match the secret created earlier to hold client certs
        sni: server.server.svc.cluster.local
