ossm/server-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: server
spec:
  hosts:
  - server.server.svc.cluster.local
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
